--- a/index.html
+++ b/index.html
@@ -228,22 +228,22 @@
         window.onload = function() {
           Particles.init({
             selector: '.background',
-            maxParticles: 350,
+            maxParticles: 380,
             color:'#48F2E3',
-
             responsive:[
                 {
                     breakpoint: 768,
                     options: {
-                        maxParticles: 30,
+                        maxParticles: 300,
                         color: '#48F2E3',
-                        connectParticles: true 
+                        connectParticles: false 
                     }
                 }, {
                     breakpoint: 425,
                     options:{
-                        maxParticles: 30,
-                        connectParticles: true
+                        maxParticles: 200,
+                        connectParticles: false
+                        color:'#48F2E3',
                     }
                 }, {
                     breakpoint: 320,
