--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
                     breakpoint: 425,
                     options:{
                         maxParticles: 200,
-                        connectParticles: false
-                        color:'#48F2E3',
+                        connectParticles: false,
+                        color:'#48F2E3'
                     }
                 }, {
                     breakpoint: 320,
