--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@
                 }, {
                     breakpoint: 320,
                     options: {
-                        maxParticles: 0
+                        maxParticles: 100,
+                        connectParticles: false,
+                        color:'#48F2E3'
                     }
                 }
 
