--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div data-aos="zoom-in" data-aos-duration="2000">
                             <h1 class="font-weight-light page-title">Hi! Welcome to my portfolio</h1>
                         </div>
-                         <div data-aos="face-up" data-aos-duration="2000">
+                         <div data-aos="fade-up" data-aos-duration="2000">
                             <p class ="lead page-title">This website is still under construction</p>
                         </div>
                     </div>
@@ -248,7 +248,7 @@
                 }, {
                     breakpoint: 320,
                     options: {
-                        maxParticles: 100,
+                        maxParticles: 70,
                         connectParticles: false,
                         color:'#48F2E3'
                     }
