like this color better

--- a/index.html
+++ b/index.html
@@ -251,23 +251,23 @@
         window.onload = function() {
           Particles.init({
             selector: '.background',
-            maxParticles: 60,
-            color:'#ffffff',
-            connectParticles:true,
+            maxParticles: 400,
+            color:'#48F2E3',
+            connectParticles:false,
             responsive:[
                 {
                     breakpoint: 768,
                     options: {
-                        maxParticles: 40,
-                        color: '#ffffff',
-                        connectParticles: true 
+                        maxParticles: 300,
+                        color: '#48F2E3',
+                        connectParticles: false 
                     }
                 }, {
                     breakpoint: 425,
                     options:{
-                        maxParticles: 30,
-                        connectParticles: true,
-                        color:'#ffffff'
+                        maxParticles: 150,
+                        connectParticles: false,
+                        color:'#48F2E3'
                     }
                 }, {
                     breakpoint: 320,
