--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                    
                     <div class="page-caption" >
                         <div data-aos="zoom-in" data-aos-duration="2000">
-                            <h1 class="title">Hi! Welcome to my portfolio</h1>
+                            <h1 class="page-title">Hi! Welcome to my portfolio</h1>
                         </div>
                          <div data-aos="fade-up" data-aos-duration="2000">
                             <h4 class ="lead page-title">This website is still under construction</h4>
