--- a/index.html
+++ b/index.html
@@ -28,21 +28,30 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
-                          <span class="sr-only">(current)</span>
-                        </a>
+                    <a class="nav-link" href="#">
+                        <ion-icon style="margin-right: 5px" name="home"></ion-icon>Home
+                        <span class="sr-only">(current)</span>
+                    </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">
+                            <ion-icon style="margin-right: 5px" name="person"></ion-icon>About
+                    </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="#">
+                            <ion-icon style="margin-right: 5px" name="hammer"></ion-icon>Projects
+                    </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="#">
+                            <ion-icon style="margin-right: 5px" name="document"></ion-icon>Resume
+                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#">
+                            <ion-icon style="margin-right: 5px" name="mail"></ion-icon>Contact
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -181,16 +190,13 @@
                                     
                                 </div>
                             </div>
-
-                        <h3>More Things Here</h3> 
+                        <div class="p-3 mb-5 mt-5 rounded">
+                            <div class="section-title mb-0 text-center">
+                                <h3>More Things Here</h3>
+                            </div>   
+                        </div>
                         <!-- /.section-title -->
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-center">
-                    <h3> stuff</h3>
-                  
                 </div>
             </div>
         </div>
@@ -245,6 +251,7 @@
     <script>
         AOS.init();
     </script>
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
     <!--
     <script>
     $(function() {
