--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@
           Particles.init({
             selector: '.background',
             maxParticles: 400,
-            color:'#48F2E3',
+            color:'#ffdf00',
             connectParticles:false,
             responsive:[
                 {
                     breakpoint: 768,
                     options: {
                         maxParticles: 300,
-                        color: '#48F2E3',
+                        color: '#ffdf00',
                         connectParticles: false 
                     }
                 }, {
@@ -232,14 +232,14 @@
                     options:{
                         maxParticles: 150,
                         connectParticles: false,
-                        color:'#48F2E3'
+                        color:'#ffdf00'
                     }
                 }, {
                     breakpoint: 320,
                     options: {
                         maxParticles: 70,
                         connectParticles: true,
-                        color:'#48F2E3'
+                        color:'#ffdf00'
                     }
                 }
 
