--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
                             </div>
                         <div class="p-3 mb-5 mt-5 rounded">
                             <div class="section-title mb-0 text-center">
-                                <h3>More Things Here</h3>
+                                <h3>Contact Me</h3>
+                                <p><ion-icon style="margin-right: 5px" name="mail"></ion-icon>mattgottlieb96@gmail.com</p>
                             </div>   
                         </div>
                         <!-- /.section-title -->
