--- a/index.html
+++ b/index.html
@@ -191,9 +191,14 @@
                                 </div>
                             </div>
                         <div class="p-3 mb-5 mt-5 rounded">
-                            <div class="section-title mb-0 text-center">
+                            <div class="container section-title mb-0 text-center">
                                 <h3>Contact Me</h3>
-                                <p><ion-icon style="margin-right: 5px" name="mail"></ion-icon>mattgottlieb96@gmail.com</p>
+                                <div class="row">
+                                    <div class="col">
+                                    <p><ion-icon style="margin-right: 5px" name="mail"></ion-icon>
+                                    mattgottlieb96@gmail.com</p>
+                                    </div>
+                                </div>
                             </div>   
                         </div>
                         <!-- /.section-title -->
