--- a/index.html
+++ b/index.html
@@ -103,43 +103,43 @@
                                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-center">
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/EknN2SI7X80/200x200" style= "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/EknN2SI7X80/200x200" style= "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                     </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                     
                                  </div>
                                  <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style= "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style= "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                 </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                 </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                 </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style= "width: 100%; height: 100%"class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style= "width: 100%; height: 100%"class="rounded image " alt="...">
                                     </a>
                                 </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                 </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                 </div>
                                 
@@ -148,37 +148,37 @@
                                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-center">
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                     </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                     </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style= "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style= "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                     </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                     </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style= "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style= "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                     </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                     </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                     </div>
                                     <div class="mt-2">
