--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     </div>
                                     <div class="mt-2">
                                     <a href="#">
-                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image dark" alt="...">
+                                        <img src="https://source.unsplash.com/b21Ty33CqVs/200x200" style=  "width: 100%; height: 100%" class="rounded image " alt="...">
                                     </a>
                                     </div>
                                 
