adding some functionality

--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#home">
                         <ion-icon style="margin-right: 5px" name="home"></ion-icon>Home
                         <span class="sr-only">(current)</span>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#about">
                             <ion-icon style="margin-right: 5px" name="person"></ion-icon>About
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#projects">
                             <ion-icon style="margin-right: 5px" name="hammer"></ion-icon>Projects
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#resume">
                             <ion-icon style="margin-right: 5px" name="document"></ion-icon>Resume
                      </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#contact">
                             <ion-icon style="margin-right: 5px" name="mail"></ion-icon>Contact
                     </a>
                   </li>
@@ -80,7 +80,7 @@
     </div>
     <div>
         <div class="container card-section bg-white main-raised">
-            <div class="card-block mb30">
+            <div class="card-block mb30" id="projects">
                         <!-- section-title -->
                         <div class="p-3 mb-5 rounded">
                         <div class="section-title mb-0 text-center">
@@ -191,7 +191,7 @@
                                 </div>
                             </div>
                         <div class="p-3 mb-5 mt-5 rounded">
-                            <div class="container section-title mb-0 text-center">
+                            <div class="container section-title mb-0 text-center" id="contact">
                                 <h3>Contact Me</h3>
                                 <div class="row">
                                     <div class="col">
