--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#home">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#home">
                         <ion-icon style="margin-right: 5px" name="home"></ion-icon>Home
-                        <span class="sr-only">(current)</span>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -59,7 +58,7 @@
     </nav>
      
     
-    <div class="header-photo main">
+    <div class="header-photo main" id="home">
         <canvas class="background"></canvas>
         <div class="container">
             <div class="row">
@@ -259,6 +258,13 @@
         AOS.init();
     </script>
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <script>
+    $(".nav-item .nav-link").on("click", function(){
+        $(".nav-item").find(".active").removeClass("active");
+        $(this).addClass("active");
+     });
+    </script>
+
     <!--
     <script>
     $(function() {
