--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
                                     <h3>Contact Me</h3>
                                 </div>
                                 <div class="row">
-                                    <div class="col">
-                                        <div data-aos="flip-right" data-aos-duration="2500">
+                                    <div class="col" data-aos="zoom-out-up" data-aos-duration="2500">
+                                    
                                     <p><ion-icon style="margin-right: 5px" name="mail"></ion-icon>
                                     mattgottlieb96@gmail.com</p>
-                                        </div>
+                                      
                                     </div>
                                 </div>
                             </div>   
