--- a/index.html
+++ b/index.html
@@ -224,16 +224,16 @@
                                 </div>
                             </div>
                         <div class="p-3 mb-5 mt-5 rounded">
-                            <div class="container section-title mb-0 text-center" id="contact">
+                            <div class="container section-title mb-0 text-center" id="contact" >
                                 <div data-aos="flip-up" data-aos-duration="1000">
                                     <h3>Contact Me</h3>
                                 </div>
                                 <div class="row">
-                                    <div class="col" data-aos="zoom-out-up" data-aos-duration="2500">
-                                    
+                                    <div class="col">
+                                    <div data-aos="flip-right" data-aos-duration="1000">
                                     <p><ion-icon style="margin-right: 5px" name="mail"></ion-icon>
-                                    mattgottlieb96@gmail.com</p>
-                                      
+                                    mattgottlieb96@gmail.com</p>    
+                                    </div>     
                                     </div>
                                 </div>
                             </div>   
