--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#resume">
+                    <a class="nav-link" href="resume.html#resume">
                             <ion-icon style="margin-right: 5px" name="document"></ion-icon>Resume
                      </a>
                   </li>
