--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                                         <div class="thumbnail text-center ">
                                                 <img src="https://source.unsplash.com/EknN2SI7X80/200x200" style= "width: 100%; height: 100%" class="rounded image " alt="...">
                                                 <div class = "caption">
-                                                    <h4>Ocean Recovery Lab</h4>
-                                                    <p>Software: Python</p>
+                                                    <!--<h4>Ocean Recovery Lab</h4>
+                                                    <p>Software: Python</p> -->
                                                 </div>
                                         </div>
                                     </a>
@@ -287,7 +287,7 @@
                     breakpoint: 320,
                     options: {
                         maxParticles: 70,
-                        connectParticles: true,
+                        connectParticles: false,
                         color:'#ffdf00'
                     }
                 }
