--- a/resume.html
+++ b/resume.html
@@ -82,12 +82,11 @@
     </div>
     <div>
         <div class="container card-section bg-white main-raised">
-
-            <div class="card-block" id="resume">
+    
+            <div class="card-block container-fluid" id="resume">
                 <div class="embed-responsive embed-responsive-1by1">
                     <iframe class="embed-responsive-item resumecontainer" src="resume.pdf"></iframe>
                 </div>
-
             </div>
         </div>
     </div>
