--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
         <div class="container card-section bg-white main-raised">
             <div class="card-block mb30" id="projects">
                 <div class="p-3 mb-5 rounded">
-                    <div data-aos="zoom-out-up" data-aos-duration="1500">
+                    <div data-aos="flip-left" data-aos-duration="1500">
                         <div class="section-title mb-0 text-center">
                             <h3>Projects Will Go Here</h3>
                         </div>
+                    </div>
                         <div class="row mb-5">
                             <div class="col text-center">
                                 <button type="button" class="btn btn-outline-dark " data-rel="all">All</button>
@@ -100,7 +101,7 @@
 
                         <div class="container">
                             <div class="row">
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12 text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -141,7 +142,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -177,7 +178,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -211,7 +212,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -246,7 +247,7 @@
                                 </div>
 
 
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -281,7 +282,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -316,7 +317,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -347,7 +348,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -381,7 +382,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -413,7 +414,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-md-4 col-sm-6 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -457,7 +458,7 @@
 
                             </div>
                         </div>
-                    </div>
+               
                 </div>
 
                 <div class="p-3 mb-5 mt-5 rounded">
