--- a/index.html
+++ b/index.html
@@ -88,14 +88,29 @@
                             <h3>Projects Will Go Here</h3>
                         </div>
                     </div>
-                        <div class="row mb-5">
-                            <div class="col text-center">
-                                <button type="button" class="btn btn-outline-dark " data-rel="all">All</button>
-                                <button type="button" class="btn btn-outline-dark " data-rel="1">Web</button>
-                                <button type="button" class="btn btn-outline-dark " data-rel="2">Mobile</button>
-                                <button type="button" class="btn btn-outline-dark " data-rel="3">Scripts</button>
-                                <button type="button" class="btn btn-outline-dark" data-rel="3">Other</button>
+                        <div class="mb-5">
+                            <!--
+                            <div class ="container">
+                            <div class="row text-center">
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                                    <button type="button" class="optionButton btn btn-outline-dark " data-rel="all">All</button>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                                    <button type="button" class="optionButton btn btn-outline-dark " data-rel="1">Web</button>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                                    <button type="button" class="optionButton btn btn-outline-dark " data-rel="2">Mobile</button>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                                    <button type="button" class="optionButton btn btn-outline-dark " data-rel="3">Scripts</button>
+                                </div>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                                    <button type="button" class="optionButton btn btn-outline-dark" data-rel="4">Other</button>
+                                </div>
+                         
                             </div>
+                            </div>
+                            -->
 
                         </div>
 
@@ -217,8 +232,9 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                                <img src="https://source.unsplash.com/b21Ty33CqVs/200x200"
-                                                    class="mbr-figure__img rounded" alt="Card 2" title="Card 2">
+                                                <img src="css/images/walterreed.png"
+                                                    style="width: 200px; height: 200px;" class="mbr-figure__img rounded"
+                                                    alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
 
@@ -339,7 +355,7 @@
                                             </button>
                                             <div class="collapse" id="collapse7">
                                                 <div class="card card-body">
-                                                    <p>Developed Linux Operating System
+                                                    <p>Developed Linux Operating System in C for CS170 class at UCSB
                                                     </p>
                                                 </div>
                                             </div>
