--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                         </div>
 
-                        <div class="container">
+                        <div class="container text-center">
                             <div class="row">
                                 <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12 text-center">
                                     <div class="team-item news c-info">
