trying to fix img not centered mobile

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                         <div class="container text-center">
                             <div class="row">
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12 text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -157,7 +157,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -193,7 +193,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -227,7 +227,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -263,7 +263,7 @@
                                 </div>
 
 
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -298,7 +298,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -333,7 +333,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -364,7 +364,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -398,7 +398,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
@@ -430,7 +430,7 @@
                                     </div>
                                 </div>
 
-                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12  text-center">
+                                <div class="mbr-cards-col col-lg-4 col-md-6 col-sm-12 col-xs-12">
                                     <div class="team-item news c-info">
                                         <div class="image">
                                             <figure
