--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
                                             <div class="collapse" id="collapse3">
                                                 <div class="card card-body">
                                                     <p>Designed and developed the website and ecommerce platform for a
-                                                        startup
-                                                        called LocNes.</p>
+                                                        startup called LocNes.</p>
                                                 </div>
                                             </div>
 
@@ -386,7 +385,7 @@
                                             <div class="collapse" id="collapse8">
                                                 <div class="card card-body">
                                                     <p>Constructed a custom 3D Printer which uses a Raspberry Pi to
-                                                        access the printer over the local network
+                                                        access the printer over the local network.
                                                         Gained experience with CAD by designing parts for projects made
                                                         with this printer.
 
@@ -421,7 +420,7 @@
                                             <div class="collapse" id="collapse9">
                                                 <div class="card card-body">
                                                     <p>Built a functional and fast first-person-view quadcopter to
-                                                        better understand how all the hardware
+                                                        gain a better understanding of how all the software and hardware components work together.
                                                     </p>
                                                 </div>
                                             </div>
