--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
 </head>
 
 <body>
@@ -36,7 +36,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#about">
+                        <a class="nav-link active" href="index.html#about">
                             <ion-icon style="margin-right: 5px" name="person"></ion-icon>About
                         </a>
                     </li>
@@ -46,7 +46,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#resume">
+                        <a class="nav-link" href="#resume">
                             <ion-icon style="margin-right: 5px" name="document"></ion-icon>Resume
                         </a>
                     </li>
@@ -80,11 +80,7 @@
     </div>
     <div>
         <div class="container card-section bg-white main-raised">
-            <div class="card-block container-fluid" id="resume">
-                <div class="embed-responsive embed-responsive-1by1">
-                    <iframe class="embed-responsive-item resumecontainer" src="resume.pdf"></iframe>
-                </div>
-            </div>
+           
         </div>
     </div>
     </div>
@@ -154,57 +150,6 @@
         });
     </script>
 
-    <!--
-    <script>
-    $(function() {
-        var selectedClass = "";
-        $(".filter").click(function(){
-            selectedClass = $(this).attr("data-rel");
-            $("#gallery").fadeTo(100, 0.1);
-            $("#gallery div").not("."+selectedClass).fadeOut().removeClass('animation');
-            setTimeout(function() {
-                $("."+selectedClass).fadeIn().addClass('animation');
-                $("#gallery").fadeTo(300, 1);
-            }, 300);
-        });
-    }); 
-    </script>
-    -->
-    <!--
-    <script>
-        var textWrapper = document.querySelector('.ml11 .letters');
-textWrapper.innerHTML = textWrapper.textContent.replace(/([^\x00-\x80]|\w)/g, "<span class='letter'>$&</span>");
-
-anime.timeline({loop: true})
-  .add({
-    targets: '.ml11 .line',
-    scaleY: [0,1],
-    opacity: [0.5,1],
-    easing: "easeOutExpo",
-    duration: 700
-  })
-  .add({
-    targets: '.ml11 .line',
-    translateX: [0, document.querySelector('.ml11 .letters').getBoundingClientRect().width + 10],
-    easing: "easeOutExpo",
-    duration: 700,
-    delay: 100
-  }).add({
-    targets: '.ml11 .letter',
-    opacity: [0,1],
-    easing: "easeOutExpo",
-    duration: 600,
-    offset: '-=775',
-    delay: (el, i) => 34 * (i+1)
-  }).add({
-    targets: '.ml11',
-    opacity: 0,
-    duration: 1000,
-    easing: "easeOutExpo",
-    delay: 1000
-  });
-    </script>
-    -->
 </body>
 
 </html>
