--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
-                                                <img src="https://source.unsplash.com/EknN2SI7X80/200x200"
-                                                    class="mbr-figure__img rounded" alt="Card 1" title="Card 1">
+                                                <img src="css/images/placeholder.png"
+                                                    class="mbr-figure__img rounded img-fluid" alt="Card 1" title="Card 1">
                                             </figure>
                                         </div>
                                         <h3 class="styled">Ocean Recovery Lab</h3>
@@ -162,8 +162,8 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                                <img src="https://source.unsplash.com/b21Ty33CqVs/200x200"
-                                                    class="mbr-figure__img rounded" alt="Card 2" title="Card 2">
+                                                <img src="css/images/placeholder.png"
+                                                    class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
 
@@ -199,7 +199,7 @@
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
                                                 <img src="css/images/DrinkLocCar.png"
-                                                    style="width: 200px; height: 200px;" class="mbr-figure__img rounded"
+                                                    class="mbr-figure__img rounded img-fluid"
                                                     alt="Card 3" title="Card 3">
                                             </figure>
                                         </div>
@@ -232,7 +232,7 @@
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
                                                 <img src="css/images/walterreed.png"
-                                                    style="width: 200px; height: 200px;" class="mbr-figure__img rounded"
+                                                    class="mbr-figure__img rounded img-fluid"
                                                     alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
@@ -267,8 +267,8 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                                <img src="https://source.unsplash.com/b21Ty33CqVs/200x200"
-                                                    class="mbr-figure__img rounded" alt="Card 2" title="Card 2">
+                                                <img src="css/images/placeholder.png"
+                                                    class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
 
@@ -302,8 +302,8 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                                <img src="https://source.unsplash.com/b21Ty33CqVs/200x200"
-                                                    class="mbr-figure__img rounded" alt="Card 2" title="Card 2">
+                                                <img src="css/images/placeholder.png"
+                                                    class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
 
@@ -337,8 +337,8 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                                <img src="https://source.unsplash.com/b21Ty33CqVs/200x200"
-                                                    class="mbr-figure__img rounded" alt="Card 2" title="Card 2">
+                                                <img src="css/images/placeholder.png"
+                                                    class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
 
@@ -368,8 +368,8 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                                <img src="css/images/cr10.jpg" style="width:200px; height:200px;"
-                                                    class="mbr-figure__img rounded" alt="Card 2" title="Card 2">
+                                                <img src="css/images/cr10.jpg" 
+                                                    class="mbr-figure__img rounded img-fluid" alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
 
@@ -402,8 +402,8 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                                <img src="css/images/quadcopterFinal.jpg"
-                                                    style="width: 200px; height: 200px;" class="mbr-figure__img rounded"
+                                                <img class="img-fluid" src="css/images/quadcopterFinal.jpg"
+                                                    class="mbr-figure__img rounded"
                                                     alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
@@ -434,7 +434,7 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                                                <img src="css/images/miningRig.jpg" style="width:200px; height:200px;"
+                                                <img class="img-fluid" src="css/images/miningRig.jpg"
                                                     class="mbr-figure__img rounded" alt="Card 2" title="Card 2">
                                             </figure>
                                         </div>
