update for formatting mobile

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                                             </figure>
                                         </div>
 
-                                        <h3 class="">Cryptocurrency "Mining Rig" Computer</h3>
+                                        <h3 class="">Ethereum "Mining Rig" Computer</h3>
                                         <h6 class="styled position">Mechanical</h4>
                                             <p class="software"></p>
                                             <div class="separator"></div>
