--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                         <div class="image">
                                             <figure
                                                 class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width ">
-                                                <img src="css/images/placeholder.png"
+                                                <img src="css/images/coral-tomoe-steineck.jpg"
                                                     class="mbr-figure__img rounded img-fluid" alt="Card 1" title="Card 1">
                                             </figure>
                                         </div>
