--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="p-3 mb-5 rounded">
                    
                         <div class="section-title mb-0 text-center">
-                            <h3>Projects Will Go Here</h3>
+                            <h3>Projects & Work Experience</h3>
                         </div>
                     
                         <div class="mb-5">
